--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: /opt/anaconda3/include\n",
+      "    lib directory: /opt/anaconda3/lib\n",
+      "    name: openblas\n",
+      "    openblas configuration: USE_64BITINT= DYNAMIC_ARCH=1 DYNAMIC_OLDER= NO_CBLAS=\n",
+      "      NO_LAPACK=0 NO_LAPACKE= NO_AFFINITY=1 USE_OPENMP=0 VORTEX MAX_THREADS=128\n",
+      "    pc file directory: /opt/anaconda3/lib/pkgconfig\n",
+      "    version: 0.3.21\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep4347739648\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    args: -ftree-vectorize, -fPIC, -fPIE, -fstack-protector-strong, -O2, -pipe, -isystem,\n",
+      "      /opt/anaconda3/include, -fdebug-prefix-map=/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work=/usr/local/src/conda/numpy-base-1.26.4,\n",
+      "      -fdebug-prefix-map=/opt/anaconda3=/usr/local/src/conda-prefix, -D_FORTIFY_SOURCE=2,\n",
+      "      -isystem, /opt/anaconda3/include, -mmacosx-version-min=11.1\n",
+      "    commands: arm64-apple-darwin20.0.0-clang\n",
+      "    linker: ld64\n",
+      "    linker args: -Wl,-pie, -Wl,-headerpad_max_install_names, -Wl,-dead_strip_dylibs,\n",
+      "      -Wl,-rpath,/opt/anaconda3/lib, -L/opt/anaconda3/lib, -ftree-vectorize, -fPIC,\n",
+      "      -fPIE, -fstack-protector-strong, -O2, -pipe, -isystem, /opt/anaconda3/include,\n",
+      "      -fdebug-prefix-map=/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work=/usr/local/src/conda/numpy-base-1.26.4,\n",
+      "      -fdebug-prefix-map=/opt/anaconda3=/usr/local/src/conda-prefix, -D_FORTIFY_SOURCE=2,\n",
+      "      -isystem, /opt/anaconda3/include, -mmacosx-version-min=11.1\n",
+      "    name: clang\n",
+      "    version: 14.0.6\n",
+      "  c++:\n",
+      "    args: -ftree-vectorize, -fPIC, -fPIE, -fstack-protector-strong, -O2, -pipe, -stdlib=libc++,\n",
+      "      -fvisibility-inlines-hidden, -fmessage-length=0, -isystem, /opt/anaconda3/include,\n",
+      "      -fdebug-prefix-map=/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work=/usr/local/src/conda/numpy-base-1.26.4,\n",
+      "      -fdebug-prefix-map=/opt/anaconda3=/usr/local/src/conda-prefix, -D_FORTIFY_SOURCE=2,\n",
+      "      -isystem, /opt/anaconda3/include, -mmacosx-version-min=11.1\n",
+      "    commands: arm64-apple-darwin20.0.0-clang++\n",
+      "    linker: ld64\n",
+      "    linker args: -Wl,-pie, -Wl,-headerpad_max_install_names, -Wl,-dead_strip_dylibs,\n",
+      "      -Wl,-rpath,/opt/anaconda3/lib, -L/opt/anaconda3/lib, -ftree-vectorize, -fPIC,\n",
+      "      -fPIE, -fstack-protector-strong, -O2, -pipe, -stdlib=libc++, -fvisibility-inlines-hidden,\n",
+      "      -fmessage-length=0, -isystem, /opt/anaconda3/include, -fdebug-prefix-map=/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work=/usr/local/src/conda/numpy-base-1.26.4,\n",
+      "      -fdebug-prefix-map=/opt/anaconda3=/usr/local/src/conda-prefix, -D_FORTIFY_SOURCE=2,\n",
+      "      -isystem, /opt/anaconda3/include, -mmacosx-version-min=11.1\n",
+      "    name: clang\n",
+      "    version: 14.0.6\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: aarch64\n",
+      "    endian: little\n",
+      "    family: aarch64\n",
+      "    system: darwin\n",
+      "  host:\n",
+      "    cpu: aarch64\n",
+      "    endian: little\n",
+      "    family: aarch64\n",
+      "    system: darwin\n",
+      "Python Information:\n",
+      "  path: /opt/anaconda3/bin/python\n",
+      "  version: '3.12'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - NEON\n",
+      "  - NEON_FP16\n",
+      "  - NEON_VFPV4\n",
+      "  - ASIMD\n",
+      "  found:\n",
+      "  - ASIMDHP\n",
+      "  not found:\n",
+      "  - ASIMDFHM\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2, 3, 5)  # Generates values between 0 and 1\n",
+    "\n",
+    "a_normal_dist = np.random.randn(2, 3, 5)  # Generates values from a normal distribution (mean=0, std=1)\n",
+    "\n",
+    "a_randint = np.random.randint(10, 100, (2,3,5))"
    ]
   },
   {
@@ -68,11 +165,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.2308987  0.95157102 0.11308172 0.26292366 0.70022664]\n",
+      "  [0.5850733  0.72930913 0.52903728 0.6266166  0.17130269]\n",
+      "  [0.57306775 0.78709858 0.77193743 0.76610306 0.53558263]]\n",
+      "\n",
+      " [[0.58941166 0.3729463  0.34140398 0.09163842 0.0550272 ]\n",
+      "  [0.06272358 0.15617385 0.87110526 0.96612195 0.83944623]\n",
+      "  [0.82653597 0.78015353 0.87999142 0.79534223 0.79882763]]]\n",
+      "[[[-1.02563312  1.38300053 -0.00555892 -0.12123539  1.10837304]\n",
+      "  [-0.95932388 -0.23812287 -0.00719638  1.2964394  -0.79676558]\n",
+      "  [-0.42715926  1.91137069 -0.00363406 -0.26406214 -0.23271128]]\n",
+      "\n",
+      " [[-0.12082157  1.7803981  -0.7089879   0.97843754  0.73318859]\n",
+      "  [-0.12366576 -0.07979354  0.15100141 -0.44299813 -2.03649415]\n",
+      "  [ 0.85819569  0.10169208 -1.333902    0.42805996 -0.19954078]]]\n",
+      "[[[21 86 83 25 31]\n",
+      "  [60 80 22 82 40]\n",
+      "  [36 81 28 47 72]]\n",
+      "\n",
+      " [[38 31 27 74 84]\n",
+      "  [80 65 23 53 35]\n",
+      "  [40 94 11 63 24]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n",
+    "print(a_normal_dist)\n",
+    "print(a_randint)"
    ]
   },
   {
@@ -85,11 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.full((5,2,3), 1)"
    ]
   },
   {
@@ -102,11 +229,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]\n",
+      "\n",
+      " [[1 1 1]\n",
+      "  [1 1 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)"
    ]
   },
   {
@@ -119,11 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of a: 30\n",
+      "Size of b: 30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"Size of a:\", a.size)\n",
+    "print(\"Size of b:\", b.size)"
    ]
   },
   {
@@ -136,11 +294,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n",
+      "(2, 3, 5)\n",
+      "(5, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "try:\n",
+    "    c = a+b\n",
+    "    print (c)\n",
+    "except ValueError as e: \n",
+    "    print(\"error\", e)\n",
+    "\n",
+    "    #no, because the shapes are different\n",
+    "\n",
+    "print(a.shape)\n",
+    "print(b.shape)"
    ]
   },
   {
@@ -154,11 +332,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]\n",
+      "\n",
+      " [[1 1 1 1 1]\n",
+      "  [1 1 1 1 1]\n",
+      "  [1 1 1 1 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "c = np.transpose(b, (1, 2, 0))\n",
+    "\n",
+    "print(c)"
    ]
   },
   {
@@ -171,11 +366,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.2308987  1.95157102 1.11308172 1.26292366 1.70022664]\n",
+      "  [1.5850733  1.72930913 1.52903728 1.6266166  1.17130269]\n",
+      "  [1.57306775 1.78709858 1.77193743 1.76610306 1.53558263]]\n",
+      "\n",
+      " [[1.58941166 1.3729463  1.34140398 1.09163842 1.0550272 ]\n",
+      "  [1.06272358 1.15617385 1.87110526 1.96612195 1.83944623]\n",
+      "  [1.82653597 1.78015353 1.87999142 1.79534223 1.79882763]]]\n",
+      "success\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "try:\n",
+    "    d = a+c\n",
+    "    print (d)\n",
+    "    print(\"success\")\n",
+    "except ValueError as e: \n",
+    "    print(\"error\", e)\n",
+    "\n",
+    "    #it works not because the shapes are the same."
    ]
   },
   {
@@ -188,12 +405,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.2308987  0.95157102 0.11308172 0.26292366 0.70022664]\n",
+      "  [0.5850733  0.72930913 0.52903728 0.6266166  0.17130269]\n",
+      "  [0.57306775 0.78709858 0.77193743 0.76610306 0.53558263]]\n",
+      "\n",
+      " [[0.58941166 0.3729463  0.34140398 0.09163842 0.0550272 ]\n",
+      "  [0.06272358 0.15617385 0.87110526 0.96612195 0.83944623]\n",
+      "  [0.82653597 0.78015353 0.87999142 0.79534223 0.79882763]]] \n",
+      "\n",
+      "\n",
+      "\n",
+      "[[[1.2308987  1.95157102 1.11308172 1.26292366 1.70022664]\n",
+      "  [1.5850733  1.72930913 1.52903728 1.6266166  1.17130269]\n",
+      "  [1.57306775 1.78709858 1.77193743 1.76610306 1.53558263]]\n",
+      "\n",
+      " [[1.58941166 1.3729463  1.34140398 1.09163842 1.0550272 ]\n",
+      "  [1.06272358 1.15617385 1.87110526 1.96612195 1.83944623]\n",
+      "  [1.82653597 1.78015353 1.87999142 1.79534223 1.79882763]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a, \"\\n\\n\\n\")\n",
+    "print(d)\n",
+    "\n",
+    "#d is now values a+c. i.e random values from a +"
    ]
   },
   {
@@ -206,11 +449,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.2308987  0.95157102 0.11308172 0.26292366 0.70022664]\n",
+      "  [0.5850733  0.72930913 0.52903728 0.6266166  0.17130269]\n",
+      "  [0.57306775 0.78709858 0.77193743 0.76610306 0.53558263]]\n",
+      "\n",
+      " [[0.58941166 0.3729463  0.34140398 0.09163842 0.0550272 ]\n",
+      "  [0.06272358 0.15617385 0.87110526 0.96612195 0.83944623]\n",
+      "  [0.82653597 0.78015353 0.87999142 0.79534223 0.79882763]]]\n",
+      "success\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "try:\n",
+    "    e = a*c\n",
+    "    print (e)\n",
+    "    print(\"success\")\n",
+    "except ValueError as e: \n",
+    "    print(\"error\", e)"
    ]
   },
   {
@@ -228,7 +491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n",
+    "### yes. Multiplying by 1 doesn't change a. \n",
     "\n"
    ]
   },
@@ -243,12 +506,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Value (d_max): 1.966121954297798\n",
+      "Min Value (d_min): 1.0550272048549418\n",
+      "Mean Value (d_mean): 1.5586893142803564\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = d.max()\n",
+    "\n",
+    "d_min = d.min()\n",
+    "\n",
+    "d_mean = d.mean()\n",
+    "\n",
+    "print(\"Max Value (d_max):\", d_max)\n",
+    "print(\"Min Value (d_min):\", d_min)\n",
+    "print(\"Mean Value (d_mean):\", d_mean)"
    ]
   },
   {
@@ -261,11 +543,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]\n",
+      "\n",
+      " [[0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty((2,3,5))\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +584,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 25.  75.  25.  25.  75.]\n",
+      "  [ 75.  75.  25.  75.  25.]\n",
+      "  [ 75.  75.  75.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.  25.   0.]\n",
+      "  [ 25.  25.  75. 100.  75.]\n",
+      "  [ 75.  75.  75.  75.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d_max = d.max()\n",
+    "d_min = d.min()\n",
+    "d_mean = d.mean()\n",
+    "\n",
+    "#f = np.zeros_like(d)\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range (d.shape[2]):\n",
+    "            if(d[i,j,k]==d_min):\n",
+    "                f[i,j,k] = 0\n",
+    "            elif(d_min < d[i,j,k] < d_mean):\n",
+    "                f[i,j,k]= 25\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif(d_mean < d[i,j,k] < d_max):\n",
+    "                f[i, j, k] = 75\n",
+    "            elif(d[i,j,k]==d_max):\n",
+    "                f[i,j,k] = 100\n",
+    "               \n",
+    "\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +659,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.2308987  1.95157102 1.11308172 1.26292366 1.70022664]\n",
+      "  [1.5850733  1.72930913 1.52903728 1.6266166  1.17130269]\n",
+      "  [1.57306775 1.78709858 1.77193743 1.76610306 1.53558263]]\n",
+      "\n",
+      " [[1.58941166 1.3729463  1.34140398 1.09163842 1.0550272 ]\n",
+      "  [1.06272358 1.15617385 1.87110526 1.96612195 1.83944623]\n",
+      "  [1.82653597 1.78015353 1.87999142 1.79534223 1.79882763]]] \n",
+      "\n",
+      "[[[ 25.  75.  25.  25.  75.]\n",
+      "  [ 75.  75.  25.  75.  25.]\n",
+      "  [ 75.  75.  75.  75.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.  25.   0.]\n",
+      "  [ 25.  25.  75. 100.  75.]\n",
+      "  [ 75.  75.  75.  75.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d, \"\\n\")\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +707,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'D' 'B' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'D' 'D' 'D' 'B']]\n",
+      "\n",
+      " [['D' 'B' 'B' 'B' 'A']\n",
+      "  ['B' 'B' 'D' 'E' 'D']\n",
+      "  ['D' 'D' 'D' 'D' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "\n",
+    "f_obj = f.astype(object)\n",
+    "\n",
+    "for i in range(f_obj.shape[0]):\n",
+    "    for j in range(f_obj.shape[1]):\n",
+    "        for k in range (f_obj.shape[2]):\n",
+    "            if(f_obj[i,j,k]==0):\n",
+    "                f_obj[i,j,k] = \"A\"\n",
+    "            elif(f_obj[i,j,k]==25):\n",
+    "                f_obj[i,j,k] = \"B\"\n",
+    "            elif(f_obj[i,j,k]==50):\n",
+    "                f[i,j,k] = \"C\"\n",
+    "            elif(f_obj[i,j,k]==75):\n",
+    "                f_obj[i,j,k] = \"D\"\n",
+    "            elif(f_obj[i,j,k]==100):\n",
+    "                f_obj[i,j,k] = \"E\"\n",
+    "\n",
+    "print(f_obj)\n",
+    "                "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
