--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(np.__version__)\n"
    ]
   },
   {
@@ -51,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2, 3, 5)"
    ]
   },
   {
@@ -68,11 +76,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.87860651 0.92077227 0.21262997 0.48554365 0.9372853 ]\n",
+      "  [0.70861208 0.18884171 0.3183815  0.50941561 0.96022178]\n",
+      "  [0.46827591 0.80086935 0.69757676 0.8575967  0.49181767]]\n",
+      "\n",
+      " [[0.01137793 0.74226323 0.30126172 0.64679946 0.4125845 ]\n",
+      "  [0.7471693  0.08877189 0.60246005 0.58103283 0.75498586]\n",
+      "  [0.78177947 0.72871877 0.23729971 0.70181209 0.84612777]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)"
    ]
   },
   {
@@ -85,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a.size == b.size)\n"
    ]
   },
   {
@@ -136,11 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 5)\n",
+      "(5, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a.shape)\n",
+    "print(b.shape)\n",
+    "\n",
+    "# No, not without transposing. As seen from the code, 'a' and 'b' have incompatible dimensions. "
    ]
   },
   {
@@ -154,11 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "# still have questions regarding transpose "
    ]
   },
   {
@@ -171,11 +236,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.87860651 1.92077227 1.21262997 1.48554365 1.9372853 ]\n",
+      "  [1.70861208 1.18884171 1.3183815  1.50941561 1.96022178]\n",
+      "  [1.46827591 1.80086935 1.69757676 1.8575967  1.49181767]]\n",
+      "\n",
+      " [[1.01137793 1.74226323 1.30126172 1.64679946 1.4125845 ]\n",
+      "  [1.7471693  1.08877189 1.60246005 1.58103283 1.75498586]\n",
+      "  [1.78177947 1.72871877 1.23729971 1.70181209 1.84612777]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c\n",
+    "print(d)\n",
+    "\n",
+    "# it works because now they are the same shape. \n"
    ]
   },
   {
@@ -188,12 +270,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.87860651 0.92077227 0.21262997 0.48554365 0.9372853 ]\n",
+      "  [0.70861208 0.18884171 0.3183815  0.50941561 0.96022178]\n",
+      "  [0.46827591 0.80086935 0.69757676 0.8575967  0.49181767]]\n",
+      "\n",
+      " [[0.01137793 0.74226323 0.30126172 0.64679946 0.4125845 ]\n",
+      "  [0.7471693  0.08877189 0.60246005 0.58103283 0.75498586]\n",
+      "  [0.78177947 0.72871877 0.23729971 0.70181209 0.84612777]]]\n",
+      "[[[1.87860651 1.92077227 1.21262997 1.48554365 1.9372853 ]\n",
+      "  [1.70861208 1.18884171 1.3183815  1.50941561 1.96022178]\n",
+      "  [1.46827591 1.80086935 1.69757676 1.8575967  1.49181767]]\n",
+      "\n",
+      " [[1.01137793 1.74226323 1.30126172 1.64679946 1.4125845 ]\n",
+      "  [1.7471693  1.08877189 1.60246005 1.58103283 1.75498586]\n",
+      "  [1.78177947 1.72871877 1.23729971 1.70181209 1.84612777]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)\n",
+    "\n",
+    "# since 'c' only consists of ones, the value in 'd' is 'c' + 1.\n"
    ]
   },
   {
@@ -206,11 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n"
    ]
   },
   {
@@ -224,12 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "np.array_equal(e, a)\n",
+    "# e is identical to a."
    ]
   },
   {
@@ -243,12 +359,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9602217763388978 1.0113779296381553 1.5873630446775604\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(d_max, d_min, d_mean)\n"
    ]
   },
   {
@@ -265,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty(d.shape)\n"
    ]
   },
   {
@@ -287,11 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f[d == d_min] = 0\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "f[d == d_mean] = 50\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "f[d == d_max] = 100"
    ]
   },
   {
@@ -325,11 +456,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.87860651 1.92077227 1.21262997 1.48554365 1.9372853 ]\n",
+      "  [1.70861208 1.18884171 1.3183815  1.50941561 1.96022178]\n",
+      "  [1.46827591 1.80086935 1.69757676 1.8575967  1.49181767]]\n",
+      "\n",
+      " [[1.01137793 1.74226323 1.30126172 1.64679946 1.4125845 ]\n",
+      "  [1.7471693  1.08877189 1.60246005 1.58103283 1.75498586]\n",
+      "  [1.78177947 1.72871877 1.23729971 1.70181209 1.84612777]]]\n",
+      "[[[ 75.  75.  25.  25.  75.]\n",
+      "  [ 75.  25.  25.  25. 100.]\n",
+      "  [ 25.  75.  75.  75.  25.]]\n",
+      "\n",
+      " [[  0.  75.  25.  75.  25.]\n",
+      "  [ 75.  25.  75.  25.  75.]\n",
+      "  [ 75.  75.  25.  75.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,11 +503,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['D' 'D' 'B' 'B' 'D']\n",
+      "  ['D' 'B' 'B' 'B' 'E']\n",
+      "  ['B' 'D' 'D' 'D' 'B']]\n",
+      "\n",
+      " [['A' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'B' 'D' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'D' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f_labels[f == 0] = \"A\"\n",
+    "f_labels[f == 25] = \"B\"\n",
+    "f_labels[f == 50] = \"C\"\n",
+    "f_labels[f == 75] = \"D\"\n",
+    "f_labels[f == 100] = \"E\"\n",
+    "\n",
+    "print(f_labels)"
    ]
   }
  ],
@@ -374,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
